@@ -22,6 +22,12 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+// imports para cors config
+import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import java.util.Arrays;
+
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
@@ -46,16 +52,26 @@ public class SecurityConfig {
                 .csrf(csrf -> csrf.disable())
     			.sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
     			.authorizeHttpRequests(authorize -> authorize
-    					//endpoints publicos
-    					.requestMatchers(HttpMethod.POST, "/auth/login").permitAll()
-    					.requestMatchers(HttpMethod.POST, "/auth/register").permitAll()
-    					
-    					//endpoints exclusivos de adm
-    					.requestMatchers(HttpMethod.POST, "/admin/**").hasRole("ADMIN")
-    					
-    					//outras rotas que precisem de autenticaçao
-    					.anyRequest().authenticated()
-    					)
+    				// endpoints públicos
+                	.requestMatchers(HttpMethod.POST, "/auth/login").permitAll()
+                	.requestMatchers(HttpMethod.POST, "/auth/register").permitAll()
+                
+                	// endpoitnts de mentor (requerem autenticação)
+                	.requestMatchers(HttpMethod.POST, "/api/mentors").authenticated()
+                	.requestMatchers(HttpMethod.GET, "/api/mentors").authenticated()
+                	.requestMatchers(HttpMethod.GET, "/api/mentors/**").authenticated()
+                	.requestMatchers(HttpMethod.PUT, "/api/mentors/**").authenticated()
+                	.requestMatchers(HttpMethod.DELETE, "/api/mentors/**").authenticated()
+                
+                	// endpoints de admin (requerem role ADMIN)
+                	.requestMatchers(HttpMethod.POST, "/admin/**").hasRole("ADMIN")
+                	.requestMatchers(HttpMethod.GET, "/admin/**").hasRole("ADMIN")
+                	.requestMatchers(HttpMethod.PUT, "/admin/**").hasRole("ADMIN")
+                	.requestMatchers(HttpMethod.DELETE, "/admin/**").hasRole("ADMIN")
+                
+                	// demais endpoints
+                	.anyRequest().authenticated()
+    				)
 					//configuração do 401 unauthorized
                     .exceptionHandling(exception -> exception
                     .authenticationEntryPoint(new HttpStatusEntryPoint(HttpStatus.UNAUTHORIZED))
@@ -63,17 +79,24 @@ public class SecurityConfig {
     			.addFilterBefore(securityFilter, UsernamePasswordAuthenticationFilter.class)
     			.build();
     }
-
+  
 	@Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:4200")); 
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With"));
-        configuration.setAllowCredentials(true);
-        
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-        return source;
-    }
+	public CorsConfigurationSource corsConfigurationSource() {
+    	CorsConfiguration configuration = new CorsConfiguration();
+    	configuration.setAllowedOrigins(Arrays.asList(
+        	"http://localhost:4200",  // Angular
+        	"http://localhost:8080"   // Backend
+    	));
+    	configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE","PATCH", "OPTIONS"));
+    	configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
+		configuration.setExposedHeaders(Arrays.asList(
+            "Authorization"  // Headers expostos para o frontend
+        ));
+    	configuration.setAllowCredentials(true);
+		configuration.setMaxAge(3600L); // Cache de 1 hora
+    
+    	UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+    	source.registerCorsConfiguration("/**", configuration);
+    	return source;
+	}
 }
